--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-//    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-//    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     testImplementation 'org.projectlombok:lombok:1.18.26'
     compileOnly 'org.projectlombok:lombok'
@@ -49,7 +42,6 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
-//	implementation'com.querydsl:querydsl-apt:5.1.0'
     annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
@@ -57,6 +49,8 @@ dependencies {
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2022.0.5")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 }
 
 tasks.named('test') {
